--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">AndroidX</string>
+    <string name="title_activity_basic">BasicActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_more">More</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="action_search">Search</string>
+    <string name="nav_item1">item1</string>
+    <string name="nav_item2">item2</string>
+    <string name="nav_item3">item3</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
