--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="toggle">Toggle</string>
+    <string name="bottom_sheet_email">example@xmail.com</string>
+    <string name="bottom_sheet_name">Nazifa Anis Mahin</string>
 </resources>
